Introduced classes specified in the domain model.

--- a/WesternStyle/nbproject/project.properties
+++ b/WesternStyle/nbproject/project.properties
@@ -1,9 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=WesternStyle
+application.vendor=tomas
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,7 +24,10 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/WesternStyle.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java.jar=/usr/share/java/mysql-connector-java.jar
+file.reference.mysql.jar=/usr/share/java/mysql.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -58,7 +61,9 @@ mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.mysql.jar}:\
+    ${file.reference.mysql-connector-java.jar}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
