Implemented gui tab "Invoices".

--- a/WesternStyle/nbproject/project.properties
+++ b/WesternStyle/nbproject/project.properties
@@ -28,9 +28,11 @@ endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java.jar=/usr/share/java/mysql-connector-java.jar
 file.reference.mysql.jar=/usr/share/java/mysql.jar
+file.reference.nachocalendar-0.23.jar=libs/nachocalendar-0.23.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.nachocalendar-0.23.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,7 +65,8 @@ run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${file.reference.mysql.jar}:\
-    ${file.reference.mysql-connector-java.jar}
+    ${file.reference.mysql-connector-java.jar}:\
+    ${file.reference.nachocalendar-0.23.jar}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
