--- a/WesternStyle/nbproject/project.properties
+++ b/WesternStyle/nbproject/project.properties
@@ -26,13 +26,13 @@ dist.jar=${dist.dir}/WesternStyle.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java.jar=/usr/share/java/mysql-connector-java.jar
-file.reference.mysql.jar=/usr/share/java/mysql.jar
 file.reference.nachocalendar-0.23.jar=libs/nachocalendar-0.23.jar
+file.reference.sqljdbc4.jar=C:\\Program Files\\Microsoft SQL Server JDBC Driver 3.0\\sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.nachocalendar-0.23.jar}
+    ${file.reference.nachocalendar-0.23.jar}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,8 +64,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${file.reference.mysql.jar}:\
-    ${file.reference.mysql-connector-java.jar}:\
     ${file.reference.nachocalendar-0.23.jar}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
