--- a/WesternStyle/nbproject/project.properties
+++ b/WesternStyle/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.nachocalendar-0.23.jar=libs/nachocalendar-0.23.jar
-file.reference.sqljdbc4.jar=C:\\Program Files\\Microsoft SQL Server JDBC Driver 3.0\\sqljdbc4.jar
+file.reference.sqljdbc4.jar=libs/sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
